--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
       <section class="cover-page">
         <img src="./img/cover-img.png" alt="" class="cover-img" />
         <h4 class="wedding-cover-text">Sizni toyga taklif qilamiz</h4>
-        <h1 class="wedding-couple-name">Shohida & Xayrulloxbek</h1>
+        <h1 class="wedding-couple-name">Hayrulloxbek && Nargizaxon</h1>
         <h4 class="wedding-date">11 September 2024</h4>
         <a class="open-invitation" href="#opened"
           ><i class="fa-regular fa-envelope"></i>Taklifnonani Ochish</a
